# Multislope-3I

./: Multislope 3I-all-pos.csv  Multislope 3I-rounded.kicad_pcb  Multislope 3I-rounded.kicad_prl  Multislope 3I-rounded.kicad_pro  Multislope 3I..xlsx  Multislope 3I.csv  Multislope 3I.kicad_pcb  Multislope 3I.kicad_prl  Multislope 3I.kicad_pro  Multislope 3I.kicad_sch  Multislope 3I.xml  README.md  licence.md  sym-lib-table
0603 Jumper.pretty/: 0603 Jumper.kicad_mod  Ref Case.kicad_mod
HW/: Better Op-Amp.kicad_sym  Multislope 3I.kicad_pcb  Multislope 3I.kicad_prl  Multislope 3I.kicad_pro  Multislope 3I.kicad_sch  Multislope 3I.xlsx  fp-info-cache  fp-lib-table  ~Multislope 3I.kicad_pcb.lck
HW/gerber/: Multislope 3I-B_Cu.gbr  Multislope 3I-B_Mask.gbr  Multislope 3I-B_Paste.gbr  Multislope 3I-B_Silkscreen.gbr  Multislope 3I-Edge_Cuts.gbr  Multislope 3I-F_Cu.gbr  Multislope 3I-F_Mask.gbr  Multislope 3I-F_Paste.gbr  Multislope 3I-F_Silkscreen.gbr  Multislope 3I-In1_Cu.gbr  Multislope 3I-In2_Cu.gbr  Multislope 3I-NPTH.drl  Multislope 3I-PTH.drl  Multislope 3I-job.gbrjob
Resources/: Multislope Run 3.xlsx
SW/: .gitignore  Build.bat  CMakeLists.txt  build.sh  environment.bat  main.c  main.cpp  ms.pio  upload.bat  upload.sh
SW/lib/: i2c_slave.h
SW_RP2350/: CMakeLists.txt  SW_RP2350.cpp  main.cpp  ms.pio  upload.bat
SW_RP2350/lib/: i2c_slave.h
gerber/: Multislope 3I-B_Cu.gbr  Multislope 3I-B_Mask.gbr  Multislope 3I-B_Paste.gbr  Multislope 3I-B_Silkscreen.gbr  Multislope 3I-Edge_Cuts.gbr  Multislope 3I-F_Cu.gbr  Multislope 3I-F_Mask.gbr  Multislope 3I-F_Paste.gbr  Multislope 3I-F_Silkscreen.gbr  Multislope 3I-In1_Cu.gbr  Multislope 3I-In2_Cu.gbr  Multislope 3I-NPTH.drl  Multislope 3I-PTH.drl  Multislope 3I-all-pos.csv  Multislope 3I-job.gbrjob
